force-app/main/default/objects/Bank_Customer__c/fields/Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Number__c</fullName>
    <label>Aadhar Number</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>