force-app/main/default/objects/Bank_Customer__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <displayFormat>BUK{000000}</displayFormat>
    <label>Customer ID</label>
    <type>AutoNumber</type>
</CustomField>