force-app/main/default/objects/Bank_Customer__c/fields/Is_Aadhar_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Aadhar_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Aadhar Available</label>
    <type>Checkbox</type>
</CustomField>